Playbooks added for storage pools changes made to RHEL builder images blueprints and templates

--- a/blueprints/ks.cfg
+++ b/blueprints/ks.cfg
@@ -1,8 +1,8 @@
 install
 lang en_US.UTF-8
-keyboard us
-timezone Etc/UTC --utc
-rootpw --iscrypted <encrypted_password>
+keyboard se
+timezone Europe/Stockholm --utc
+rootpw --iscrypted admin
 user --name=admin --password=admin --groups=wheel --gecos="Admin" --home=/home/admin --shell=/bin/bash
 part / --fstype="xfs" --size=8192
 part swap --size=2048
