changes made... removed cloud and other things

--- a/blueprints/ks.cfg
+++ b/blueprints/ks.cfg
@@ -2,16 +2,14 @@ install
 lang en_US.UTF-8
 keyboard se
 timezone Europe/Stockholm --utc
-rootpw --iscrypted admin
+rootpw admin
 user --name=admin --password=admin --groups=wheel --gecos="Admin" --home=/home/admin --shell=/bin/bash
 part / --fstype="xfs" --size=8192
 part swap --size=2048
 %post
 systemctl enable sshd
 systemctl enable qemu-guest-agent
-systemctl enable cloud-init
 systemctl start sshd
 systemctl start qemu-guest-agent
-systemctl start cloud-init
 %end
 reboot
