--- a/playbooks/rhel94-lab-install.yml
+++ b/playbooks/rhel94-lab-install.yml
@@ -1,5 +1,3 @@
-# Installs a RHEL 9.4 lab on a RHEL 9.4 libvirt host
-
 - name: Setup the main lab environment - hypervisor
   hosts: all
   become: yes
@@ -13,38 +11,22 @@
     disk_image_path: "/home/rhelsa/{{ storagepool_name }}/{{ vm_name }}-vm.qcow2"
 
   tasks:
-    - name: Check connection to server
-      ping: 
-      register: ping_re
-      ignore_errors: yes
+    - name: Check connection
+      ping:
 
-    - name: Fail if no connection
-      fail:
-        msg: "No connection to workstation."
-      when: ping_re.failed
-    
-    - name: Logging for ping success
-      debug: 
-        msg: "Ping successful. RHEL94 server can be reached. Proceeding with installation"
-      when: not ping_re.failed
+    - name: Create storage pool if missing
+      shell: |
+        virsh pool-define-as --name {{ storagepool_name }} --type dir --target /home/rhelsa/{{ storagepool_name }}
+        virsh pool-start {{ storagepool_name }}
+        virsh pool-autostart {{ storagepool_name }}
+      args:
+        executable: /bin/bash
+      when: "'{{ storagepool_name }}' not in lookup('pipe', 'virsh pool-list --all')"
 
-    - name: Check if storage pool exists
-      command: virsh pool-list --all
-      register: pool_list
-      failed_when: false
-
-    - name: Create storage pool if it doesn't exist
-      command: virsh pool-create-as --name "{{ storagepool_name }}" --type dir --target "/home/rhelsa/{{ storagepool_name }}"
-      when: "'{{ storagepool_name }}' not in pool_list.stdout"
-
-    - name: Check if disk image exists
-      stat:
-        path: "{{ disk_image_path }}"
-      register: img_stat
-
-    - name: Create disk image if it does not exist
+    - name: Create disk image if missing
       command: qemu-img create -f qcow2 "{{ disk_image_path }}" 40G
-      when: img_stat.stat.exists == false
+      args:
+        creates: "{{ disk_image_path }}"
 
     - name: Define the RHEL LAB VM
       community.libvirt.virt:
@@ -52,3 +34,11 @@
         xml: "{{ lookup('template', '../templates/template-rhel-94.xml.j2') }}"
         command: define
         autostart: true
+
+    - name: Start VM
+      command: virsh start "{{ vm_name }}"
+
+    - name: Enable serial console
+      command: |
+        virsh console {{ vm_name }} --force
+      ignore_errors: yes
