--- a/images/large-image-2gb/Containerfile
+++ b/images/large-image-2gb/Containerfile
@@ -1,7 +1,7 @@
 FROM alpine
 RUN mkdir -p /data && dd if=/dev/zero of=/data/bigfile bs=1M count=2048 
 RUN apk add --no-cache busybox-extras
-RUN mkdir -p /www && echo "Large image test - Index" - /www/index.html
+RUN mkdir -p /www && echo "Large image test - Index" > /www/index.html
 EXPOSE 8080
 RUN adduser -D appuser
 USER appuser
