--- a/images/large-image-2gb/Containerfile
+++ b/images/large-image-2gb/Containerfile
@@ -1,8 +1,8 @@
-FROM alpine:3.20
+FROM python:3.12-alpine
 RUN mkdir -p /data && dd if=/dev/zero of=/data/bigfile bs=1M count=2048 
 RUN apk add --no-cache busybox-static
 RUN mkdir -p /www && echo "Large image test - Index" > /www/index.html && chown -R 1000:1000 /www
 EXPOSE 8080
 RUN adduser -D -u 1000 appuser
 USER appuser
-CMD ["/bin/busybox.static", "httpd", "-f", "-p", "8080", "-h", "/www"]
+CMD ["python", "-m", "http.server", "8080", "--directory", "/www"]
