--- a/images/large-image-2gb/deploy-laimage.yaml
+++ b/images/large-image-2gb/deploy-laimage.yaml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: large-image-test-ns
+  name: ${NAMESPACE}
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: large-image-test-app
-  namespace: large-image-test-ns
+  namespace: ${NAMESPACE}
 spec:
   replicas: 1
   selector:
@@ -35,7 +35,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: large-image-test-app
-  namespace: large-image-test-ns
+  namespace: ${NAMESPACE}
 spec:
   selector:
     app: large-image-test-app
@@ -48,7 +48,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: large-image-test-app
-  namespace: large-image-test-ns
+  namespace: ${NAMESPACE}
 spec:
   to:
     kind: Service
