--- a/images/large-image-2gb/deploy-laimage.yaml
+++ b/images/large-image-2gb/deploy-laimage.yaml
@@ -1,59 +1,70 @@
----
-apiVersion: v1
-kind: Namespace
+apiVersion: template.openshift.io/v1
+kind: Template
 metadata:
-  name: ${NAMESPACE}
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: large-image-test-app
-  namespace: ${NAMESPACE}
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: large-image-test-app
-  template:
+  name: large-image-test-template
+parameters:
+  - name: NAMESPACE
+    value: large-image-test-ns
+  - name: APP_NAME
+    value: large-image-test-app
+  - name: IMAGE
+    value: ghcr.io/backchristoffer/lab-dev-env/large-image-test:latest
+  - name: PORT
+    value: "8080"
+  - name: REPLICAS
+    value: "1"
+objects:
+  - apiVersion: v1
+    kind: Namespace
     metadata:
-      labels:
-        app: large-image-test-app
+      name: ${NAMESPACE}
+  - apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: ${APP_NAME}
+      namespace: ${NAMESPACE}
     spec:
-      securityContext:
-        runAsNonRoot: true
-      containers:
-      - name: large-image-test-app
-        image: ghcr.io/backchristoffer/lab-dev-env/large-image-test:latest
-        ports:
-        - containerPort: 8080
-        securityContext:
-          allowPrivilegeEscalation: false
-          capabilities:
-            drop: ["ALL"]
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: large-image-test-app
-  namespace: ${NAMESPACE}
-spec:
-  selector:
-    app: large-image-test-app
-  ports:
-  - port: 8080
-    targetPort: 8080
-    protocol: TCP
----
-apiVersion: route.openshift.io/v1
-kind: Route
-metadata:
-  name: large-image-test-app
-  namespace: ${NAMESPACE}
-spec:
-  to:
+      replicas: ${REPLICAS}
+      selector:
+        matchLabels:
+          app: ${APP_NAME}
+      template:
+        metadata:
+          labels:
+            app: ${APP_NAME}
+        spec:
+          securityContext:
+            runAsNonRoot: true
+          containers:
+          - name: ${APP_NAME}
+            image: ${IMAGE}
+            ports:
+            - containerPort: ${PORT}
+            securityContext:
+              allowPrivilegeEscalation: false
+              capabilities:
+                drop: ["ALL"]
+  - apiVersion: v1
     kind: Service
-    name: large-image-test-app
-  port:
-    targetPort: 8080
-  tls:
-    termination: edge
+    metadata:
+      name: ${APP_NAME}
+      namespace: ${NAMESPACE}
+    spec:
+      selector:
+        app: ${APP_NAME}
+      ports:
+      - port: ${PORT}
+        targetPort: ${PORT}
+  - apiVersion: route.openshift.io/v1
+    kind: Route
+    metadata:
+      name: ${APP_NAME}
+      namespace: ${NAMESPACE}
+    spec:
+      to:
+        kind: Service
+        name: ${APP_NAME}
+      port:
+        targetPort: ${PORT}
+      tls:
+        termination: edge
