--- a/images/large-image-2gb/deploy-laimage.yaml
+++ b/images/large-image-2gb/deploy-laimage.yaml
@@ -9,10 +9,6 @@ parameters:
     value: large-image-test-app
   - name: IMAGE
     value: ghcr.io/backchristoffer/lab-dev-env/large-image-test:latest
-  - name: PORT
-    value: "8080"
-  - name: REPLICAS
-    value: "1"
 objects:
   - apiVersion: v1
     kind: Namespace
@@ -24,7 +20,7 @@ objects:
       name: ${APP_NAME}
       namespace: ${NAMESPACE}
     spec:
-      replicas: ${REPLICAS}
+      replicas: 1
       selector:
         matchLabels:
           app: ${APP_NAME}
@@ -36,14 +32,14 @@ objects:
           securityContext:
             runAsNonRoot: true
           containers:
-          - name: ${APP_NAME}
-            image: ${IMAGE}
-            ports:
-            - containerPort: ${PORT}
-            securityContext:
-              allowPrivilegeEscalation: false
-              capabilities:
-                drop: ["ALL"]
+            - name: ${APP_NAME}
+              image: ${IMAGE}
+              ports:
+                - containerPort: 8080
+              securityContext:
+                allowPrivilegeEscalation: false
+                capabilities:
+                  drop: ["ALL"]
   - apiVersion: v1
     kind: Service
     metadata:
@@ -53,8 +49,9 @@ objects:
       selector:
         app: ${APP_NAME}
       ports:
-      - port: ${PORT}
-        targetPort: ${PORT}
+        - port: 8080
+          targetPort: 8080
+          protocol: TCP
   - apiVersion: route.openshift.io/v1
     kind: Route
     metadata:
@@ -65,6 +62,6 @@ objects:
         kind: Service
         name: ${APP_NAME}
       port:
-        targetPort: ${PORT}
+        targetPort: 8080
       tls:
         termination: edge
